# forthic-rs

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
docs/: WORDS.md
examples/: generate_docs.rs  smoke_client.rs
plans/: JSONRPC-PLAN.md  PORT-PLAN.md  TEST-PORT-PLAN.md  TS-PARITY-BACKLOG.md  WORD-INVENTORY.md
scripts/: smoke_py_server.sh  smoke_ts_client.cjs  smoke_ts_client.sh  smoke_ts_server.sh
src/: errors.rs  interpreter.rs  lib.rs  literals.rs  module.rs  tokenizer.rs  utils.rs  word_options.rs
src/jsonrpc/: client.rs  errors.rs  http.rs  mod.rs  serializer.rs  server.rs
src/modules/: mod.rs
src/modules/standard/: array.rs  boolean.rs  core.rs  datetime.rs  jq_path.rs  json.rs  math.rs  mod.rs  record.rs  string.rs
tests/: array_module_test.rs  boolean_module_test.rs  core_module_test.rs  datetime_module_test.rs  json_module_test.rs  jsonrpc_client_test.rs  jsonrpc_dispatch_test.rs  jsonrpc_hardening_test.rs  jsonrpc_serializer_test.rs  jsonrpc_server_test.rs  map_word_test.rs  math_module_test.rs  present_verify_test.rs  record_module_test.rs  string_module_test.rs  tier1_correctness_test.rs  tier2_record_semantics_test.rs  try_word_test.rs  utf8_tokenizer_test.rs  word_batch0_test.rs  word_batch1_test.rs  word_batch2_test.rs  word_batch3_test.rs  word_batch4_test.rs  word_batch5_test.rs  word_error_handler_test.rs  word_locations_test.rs  zoned_datetime_literals_test.rs
tests/common/: mod.rs
