[package]
name = "forthic"
version = "0.1.0"
edition = "2021"
authors = ["Forthic Contributors"]
description = "A stack-based, concatenative language for composable transformations"
license = "MIT"
repository = "https://github.com/forthic/forthic-rs"

[dependencies]
# Error handling
thiserror = "1.0"
anyhow = "1.0"

# The interpreter is deliberately synchronous (see plans/JSONRPC-PLAN.md).
# tokio enters only via the `jsonrpc` feature when the server lands.

# Date/time
chrono = "0.4"
chrono-tz = "0.8"

# JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Regex
regex = "1.0"

# URL encoding
urlencoding = "2.1"

# CLI (optional, for bin)
clap = { version = "4", features = ["derive"], optional = true }
rustyline = { version = "12", optional = true }
colored = { version = "2", optional = true }

[dev-dependencies]
# Testing
proptest = "1.0"

[features]
default = []
cli = ["clap", "rustyline", "colored"]
# JSON-RPC multi-runtime support (see plans/JSONRPC-PLAN.md). Phase 3 adds
# the server deps here (axum, tokio, subtle).
jsonrpc = []

[[test]]
name = "jsonrpc_serializer_test"
required-features = ["jsonrpc"]

# Binary will be added in Phase 7
# [[bin]]
# name = "forthic"
# path = "src/bin/forthic.rs"
# required-features = ["cli"]
