[package]
name = "forthic"
version = "0.1.0"
edition = "2021"
authors = ["Forthic Contributors"]
description = "A stack-based, concatenative language for composable transformations"
license = "MIT"
repository = "https://github.com/forthic/forthic-rs"

[dependencies]
# Error handling
thiserror = "1.0"
anyhow = "1.0"

# The interpreter is deliberately synchronous (see plans/JSONRPC-PLAN.md);
# the async deps below are optional and enter only via the `jsonrpc` feature.
axum = { version = "0.8", optional = true }
http-body-util = { version = "0.1", optional = true }
subtle = { version = "2", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "signal", "sync"], optional = true }

# Date/time
chrono = "0.4"
chrono-tz = "0.8"

# JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Regex
regex = "1.0"

# URL encoding
urlencoding = "2.1"

# CLI (optional, for bin)
clap = { version = "4", features = ["derive"], optional = true }
rustyline = { version = "12", optional = true }
colored = { version = "2", optional = true }

[dev-dependencies]
# Testing
proptest = "1.0"

[features]
default = []
cli = ["clap", "rustyline", "colored"]
# JSON-RPC multi-runtime support (see plans/JSONRPC-PLAN.md)
jsonrpc = ["dep:axum", "dep:http-body-util", "dep:subtle", "dep:tokio"]

[[bin]]
name = "forthic-jsonrpc"
path = "src/bin/forthic-jsonrpc.rs"
required-features = ["jsonrpc"]

[[test]]
name = "jsonrpc_serializer_test"
required-features = ["jsonrpc"]

[[test]]
name = "jsonrpc_dispatch_test"
required-features = ["jsonrpc"]

# Binary will be added in Phase 7
# [[bin]]
# name = "forthic"
# path = "src/bin/forthic.rs"
# required-features = ["cli"]
