[package]
name = "forthic"
version = "0.6.0"
edition = "2021"
authors = ["Forthic Contributors"]
description = "A stack-based, concatenative language for composable transformations"
license = "MIT"
repository = "https://github.com/forthic/forthic-rs"

[dependencies]
# Error handling
thiserror = "1.0"
anyhow = "1.0"

# The interpreter is deliberately synchronous (see plans/JSONRPC-PLAN.md);
# the async deps below are optional and enter only via the `jsonrpc` feature.
axum = { version = "0.8", optional = true }
http-body-util = { version = "0.1", optional = true }
subtle = { version = "2", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "signal", "sync"], optional = true }

# Date/time
chrono = "0.4"
chrono-tz = "0.8"

# JSON
serde = { version = "1.0", features = ["derive"] }
# preserve_order keeps JSON object keys in insertion order (backed by
# indexmap), matching JS object semantics for >JSON / JSON> round-trips
serde_json = { version = "1.0", features = ["preserve_order"] }

# Insertion-ordered records: ts #33 made record words rely on JS object
# insertion order, so ForthicValue::Record must preserve it too
indexmap = "2"

# Regex
regex = "1.0"

# URL encoding
urlencoding = "2.1"

# CLI (optional, for bin)
clap = { version = "4", features = ["derive"], optional = true }
rustyline = { version = "12", optional = true }
colored = { version = "2", optional = true }

[dev-dependencies]
# Testing
proptest = "1.0"
# HTTP client for the jsonrpc server tests (no TLS needed for localhost)
reqwest = { version = "0.12", default-features = false, features = ["json"] }
# io-util for raw-socket tests (chunked bodies); merged into the feature-
# activated tokio for test builds only
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "signal"] }

[features]
default = []
cli = ["clap", "rustyline", "colored"]
# JSON-RPC multi-runtime support (see plans/JSONRPC-PLAN.md)
jsonrpc = ["dep:axum", "dep:http-body-util", "dep:subtle", "dep:tokio"]

[[bin]]
name = "forthic-jsonrpc"
path = "src/bin/forthic-jsonrpc.rs"
required-features = ["jsonrpc"]

[[test]]
name = "jsonrpc_serializer_test"
required-features = ["jsonrpc"]

[[test]]
name = "jsonrpc_dispatch_test"
required-features = ["jsonrpc"]

[[test]]
name = "jsonrpc_server_test"
required-features = ["jsonrpc"]

[[test]]
name = "jsonrpc_hardening_test"
required-features = ["jsonrpc"]

# Binary will be added in Phase 7
# [[bin]]
# name = "forthic"
# path = "src/bin/forthic.rs"
# required-features = ["cli"]
